--- a/templates/base.html
+++ b/templates/base.html
@@ -153,7 +153,7 @@
           <div class="dropdown-menu">
             <a class="dropdown-item {% if url_name == 'sr_desing_and_fabrication' %}active{% endif %}" href="/servicios/diseño-y-fabricacion-de-mobiliario-carpinteria">Diseño y fabricacion de mobiliario -
               Carpinteria</a>
-            <a class="dropdown-item {% if url_name == 'sr_tables_commercialization' %}active{% endif %}" href="/servicios/comercializacion-y-suministro-de-mesones-o-ensimeras/xtonee">Comercializacion y Suministro de mesones o
+            <a class="dropdown-item {% if url_name == 'sr_tables_commercialization' %}active{% endif %}" href="/servicios/comercializacion-y-suministro-de-mesones-o-ensimeras/gramarston">Comercializacion y Suministro de mesones o
               ensimeras</a>
             <a class="dropdown-item {% if url_name == 'sr_hardware_commercialization' %}active{% endif %}" href="/servicios/comercializacion-y-suministro-de-herraje-para-mobiliario/hettich">Comercializacion y suministro de herraje para
               mobiliario</a>
@@ -221,7 +221,7 @@
                   <span class="color-text-a">Correo .</span> sauzesmobiliario2023@gmail.com
                 </li>
                 <li class="color-a">
-                  <span class="color-text-a">Telefono .</span> +57 300 2588277
+                  <span class="color-text-a">Teléfono .</span> +57 300 2588277
                 </li>
               </ul>
             </div>
