--- a/templates/contact.html
+++ b/templates/contact.html
@@ -47,12 +47,12 @@
                     </div>
                     <div class="col-md-6 mb-3">
                       <div class="form-group">
-                        <input name="email" type="email" class="form-control form-control-lg form-control-a" placeholder="Correo electronico*" required>
+                        <input name="email" type="email" class="form-control form-control-lg form-control-a" placeholder="Correo electrónico*" required>
                       </div>
                     </div>
                     <div class="col-md-12 mb-3">
                       <div class="form-group">
-                        <input type="text" name="phone" class="form-control form-control-lg form-control-a" placeholder="Celular | telefono*" required>
+                        <input type="text" name="phone" class="form-control form-control-lg form-control-a" placeholder="Celular | Teléfono*" required>
                       </div>
                     </div>
                     <div class="col-md-12 mb-3">
@@ -80,14 +80,14 @@
                   </div>
                   <div class="icon-box-content table-cell">
                     <div class="icon-box-title">
-                      <h4 class="icon-title">Say Hello</h4>
+                      <h4 class="icon-title">Contáctanos</h4>
                     </div>
                     <div class="icon-box-content">
-                      <p class="mb-1">Email.
-                        <span class="color-a">contact@example.com</span>
+                      <p class="mb-1">Correo.
+                        <span class="color-a">sauzesmobiliario2023@gamil.com</span>
                       </p>
-                      <p class="mb-1">Phone.
-                        <span class="color-a">+54 356 945234</span>
+                      <p class="mb-1">Teléfono.
+                        <span class="color-a">+57 300 2588277</span>
                       </p>
                     </div>
                   </div>
@@ -98,12 +98,12 @@
                   </div>
                   <div class="icon-box-content table-cell">
                     <div class="icon-box-title">
-                      <h4 class="icon-title">Find us in</h4>
+                      <h4 class="icon-title">Encuéntranos</h4>
                     </div>
                     <div class="icon-box-content">
                       <p class="mb-1">
-                        Manhattan, Nueva York 10036,
-                        <br> EE. UU.
+                        Medellin, Antioquia.
+                        <br> Colombia.
                       </p>
                     </div>
                   </div>
@@ -114,29 +114,19 @@
                   </div>
                   <div class="icon-box-content table-cell">
                     <div class="icon-box-title">
-                      <h4 class="icon-title">Social networks</h4>
+                      <h4 class="icon-title">Redes sociales</h4>
                     </div>
                     <div class="icon-box-content">
                       <div class="socials-footer">
                         <ul class="list-inline">
                           <li class="list-inline-item">
-                            <a href="#" class="link-one">
+                            <a href="https://www.facebook.com/people/Sauzes-mobiliario/61553566503590/" class="link-one">
                               <i class="bi bi-facebook" aria-hidden="true"></i>
                             </a>
                           </li>
                           <li class="list-inline-item">
-                            <a href="#" class="link-one">
-                              <i class="bi bi-twitter" aria-hidden="true"></i>
-                            </a>
-                          </li>
-                          <li class="list-inline-item">
-                            <a href="#" class="link-one">
+                            <a href="https://www.instagram.com/sauzes_mobiliario/" class="link-one">
                               <i class="bi bi-instagram" aria-hidden="true"></i>
-                            </a>
-                          </li>
-                          <li class="list-inline-item">
-                            <a href="#" class="link-one">
-                              <i class="bi bi-linkedin" aria-hidden="true"></i>
                             </a>
                           </li>
                         </ul>
