--- a/templates/home.html
+++ b/templates/home.html
@@ -22,7 +22,7 @@
                     <br> {{item.name}}
                   </h1>
                   <p class="intro-subtitle intro-price">
-                    <a href="{{item.url}}"><span class="price-a">{{item.desc}}</span></a>
+                    <a href="/contacto"><span class="price-a">Mas Informacion</span></a>
                   </p>
                 </div>
               </div>
@@ -118,18 +118,6 @@
                       <span class="bi bi-chevron-right"></span>
                     </a>
                   </div>
-                  <div class="card-footer-a">
-                    <ul class="card-info d-flex justify-content-around">
-                      {% for key,value in product.desc.items%}
-                      <li>
-                        <h4 class="card-info-title">{{key}}</h4>
-                        <span>{{value}}
-                          <sup>2</sup>
-                        </span>
-                      </li>
-                      {% endfor %}
-                    </ul>
-                  </div>
                 </div>
               </div>
             </div>
@@ -204,41 +192,16 @@
     </div>
 
     <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-      <img src="{% static '/assets/img/clients/client-2.png'%}" class="img-fluid" alt="">
+      <img src="https://1000logos.net/wp-content/uploads/2023/03/Hettich-logo.png" class="img-fluid" alt="">
     </div>
 
     <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-      <img src="{% static '/assets/img/clients/client-3.png'%}" class="img-fluid" alt="">
+      <img src="https://www.cuineschacon.com/wp-content/uploads/2018/03/Blum-logo.png" class="img-fluid" alt="">
     </div>
 
     <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-      <img src="{% static '/assets/img/clients/client-4.png'%}" class="img-fluid" alt="">
+      <img src="https://www.foliomag.com/wp-content/uploads/2016/06/Quartz_Logo_Black-3-1-820x179.png" class="img-fluid" alt="">
     </div>
-
-    <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-      <img src="{% static '/assets/img/clients/client-5.png'%}" class="img-fluid" alt="">
-    </div>
-
-    <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-      <img src="{% static '/assets/img/clients/client-6.png'%}" class="img-fluid" alt="">
-    </div>
-
-    <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-      <img src="{% static '/assets/img/clients/client-3.png'%}" class="img-fluid" alt="">
-    </div>
-
-    <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-      <img src="{% static '/assets/img/clients/client-4.png'%}" class="img-fluid" alt="">
-    </div>
-
-    <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-      <img src="{% static '/assets/img/clients/client-5.png'%}" class="img-fluid" alt="">
-    </div>
-
-    <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-      <img src="{% static '/assets/img/clients/client-6.png'%}" class="img-fluid" alt="">
-    </div>
-
 
   </div>
 
