--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
   <meta content="" name="description">
   <meta content="" name="keywords">
 
-  <link rel="shortcut icon" href="{% static 'assets/img/logo_house.png'%}">
+  <link rel="shortcut icon" href="{% static '../assets/img/logo_house.png'%}">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
