--- a/templates/double_imgs.html
+++ b/templates/double_imgs.html
@@ -46,6 +46,7 @@
               <div class="card-overlay card-overlay-hover">
                 <div class="card-header-d">
                   <div class="card-title-d align-self-center title-d">
+                    <br> {{product.name}}</a>
                     <img src="{% static '/assets/img/'%}{{product.img2}}" alt="" class="img-a img-fluid">
                   </div>
                 </div>
