--- a/templates/double_imgs.html
+++ b/templates/double_imgs.html
@@ -46,7 +46,7 @@
               <div class="card-overlay card-overlay-hover">
                 <div class="card-header-d">
                   <div class="card-title-d align-self-center">
-                    <h3 class="title-d">
+                    <h3 class="title-d" style="font-size:1.5rem">
                       {{product.name}}
                       <img src="{% static '/assets/img/'%}{{product.img2}}" alt="" class="img-a img-fluid">
                     </h3>  
