--- a/templates/base.html
+++ b/templates/base.html
@@ -151,13 +151,12 @@
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false">Servicios</a>
           <div class="dropdown-menu">
-            <a class="dropdown-item {% if url_name == 'sr_desing_and_fabrication' %}active{% endif %}" href="/servicios/diseño-y-fabricacion-de-mobiliario-carpinteria">Diseño y fabricacion de mobiliario -
+            <a class="dropdown-item {% if url_name == 'sr_desing_and_fabrication' %}active{% endif %}" href="/servicios/diseno-y-fabricacion-de-mobiliario-carpinteria">Diseño y fabricacion de mobiliario -
               Carpinteria</a>
             <a class="dropdown-item {% if url_name == 'sr_tables_commercialization' %}active{% endif %}" href="/servicios/comercializacion-y-suministro-de-mesones-o-ensimeras/gramarston">Comercializacion y Suministro de mesones o
               ensimeras</a>
             <a class="dropdown-item {% if url_name == 'sr_hardware_commercialization' %}active{% endif %}" href="/servicios/comercializacion-y-suministro-de-herraje-para-mobiliario/hettich">Comercializacion y suministro de herraje para
               mobiliario</a>
-            <a class="dropdown-item {% if url_name == 'sr_appliances' %}active{% endif %}" href="/servicios/electrodomesticos/microondas">Electrodomesticos</a>
           </div>
         </li>
 
@@ -235,7 +234,7 @@
               <div class="w-body-a">
                 <ul class="list-unstyled">
                   <li class="item-list-a">
-                    <i class="bi bi-chevron-right"></i> <a href="/servicios/diseño-y-fabricacion-de-mobiliario-carpinteria">Diseño y fabricacion de mobiliario -
+                    <i class="bi bi-chevron-right"></i> <a href="/servicios/diseno-y-fabricacion-de-mobiliario-carpinteria">Diseño y fabricacion de mobiliario -
                       Carpinteria</a>
                   </li>
                   <li class="item-list-a">
@@ -245,9 +244,6 @@
                   <li class="item-list-a">
                     <i class="bi bi-chevron-right"></i> <a href="/servicios/comercializacion-y-suministro-de-herraje-para-mobiliario/hettich">Comercializacion y suministro de herraje para
                       mobiliario</a>
-                  </li>
-                  <li class="item-list-a">
-                    <i class="bi bi-chevron-right"></i> <a href="/servicios/electrodomesticos/microondas">Electrodomesticos</a>
                   </li>
                 </ul>
               </div>
