--- a/templates/home.html
+++ b/templates/home.html
@@ -104,7 +104,7 @@
           <div class="carousel-item-b swiper-slide">
             <div class="card-box-a card-shadow">
               <div class="img-box-a">
-                <img src="{% static '/assets/img/'%}{{product.img}}"  alt="" class="img-a img-fluid">
+                <img  style = "height:100%!important;width: 100%!important;" src="{% static '/assets/img/'%}{{product.img}}"  alt="" class="img-a img-fluid">
               </div>
               <div class="card-overlay">
                 <div class="card-overlay-a-content">
