--- a/templates/home.html
+++ b/templates/home.html
@@ -103,8 +103,8 @@
           {% for product in products%}
           <div class="carousel-item-b swiper-slide">
             <div class="card-box-a card-shadow">
-              <div class="img-box-a" style = "height:100%!important;width: 100%!important">
-                <img  style = "height:100%!important;width: 100%!important" src="{% static '/assets/img/'%}{{product.img}}"  alt="" class="img-a img-fluid">
+              <div class="img-box-a">
+                <img  width="200px " height="300px" src="{% static '/assets/img/'%}{{product.img}}"  alt="" class="img-a img-fluid">
               </div>
               <div class="card-overlay">
                 <div class="card-overlay-a-content">
