--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -2298,7 +2298,7 @@ footer .credits {
   margin-right: 8rem;
 }
 
-.swiper-wrapper>img {
+.carousel-item-b>img {
   width: 100%;
   height: auto;
   object-fit: cover;
