--- a/templates/home.html
+++ b/templates/home.html
@@ -104,7 +104,7 @@
           <div class="carousel-item-b swiper-slide">
             <div class="card-box-a card-shadow">
               <div class="img-box-a">
-                <img src="{% static '/assets/img/'%}{{product.img}}"  alt="" class="img-a img-fluid" style="width: 200px;height: 600px;">
+                <img src="{% static '/assets/img/'%}{{product.img}}"  alt="" class="img-a img-fluid" style="height: 450px;">
               </div>
               <div class="card-overlay">
                 <div class="card-overlay-a-content">
