--- a/templates/base.html
+++ b/templates/base.html
@@ -203,7 +203,7 @@
 
 <body>
   <!-- ======= Footer ======= -->
-  <a href="https://web.whatsapp.com/send?phone=573002588277" target="_blank" class="whatsapp_float"><i
+  <a href="https://wa.me/573002588277" target="_blank" class="whatsapp_float"><i
       class="fa-brands fa-whatsapp whatsapp-icon"></i></a>
   <section class="section-footer">
     <div class="container">
