--- a/templates/home.html
+++ b/templates/home.html
@@ -130,7 +130,7 @@
     </div>
   </section><!-- End  Products Section -->
 
-  <!-- ======= Latest Services Section ======= -->
+  <!-- ======= Services Section ======= -->
   <section class="section-news section-t8">
     <div class="container">
       <div class="row">
